ecs.tf
resource "aws_ecs_service" "flask_service" {
  name            = "flask-service"
  cluster         = aws_ecs_cluster.flask_cluster.id
  task_definition = aws_ecs_task_definition.flask_task.arn
  desired_count   = 1
  launch_type     = "FARGATE"

  network_configuration {
    subnets          = [aws_subnet.flask_subnet.id]
    security_groups  = [aws_security_group.flask_sg.id]
    assign_public_ip = true
  }
}
